--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^2.2.55",
     "@prisma/client": "^6.11.1",
     "next": "15.3.5",
+    "openai": "^5.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
