--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/nextjs": "^6.24.0",
     "@clerk/themes": "^2.2.55",
     "@prisma/client": "^6.11.1",
+    "chart.js": "^4.5.0",
     "next": "15.3.5",
     "openai": "^5.9.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
